# eidoid-pet-robot

./: .env.example  .env.template  .gitignore  BRANCH_SUMMARY.md  CHANGELOG_MEMORY.md  FIRESTORE_INTEGRATION_README.md  FIRESTORE_INTEGRATION_SUMMARY.md  FIXES_SUMMARY.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  INSTALL_RPI5.md  MEMORY_SEPARATION.md  MEMORY_SYSTEM.md  PUSH_INSTRUCTIONS.md  QUICKSTART.md  README.md  README_RPI5.md  README_STREAMLINED.md  SHUTDOWN_FIXES.md  check_firestore_setup.py  config.py  eidoid-robot.service  example_usage.py  firestore_memory.py  gemini_persona.py  led_controller.py  list_audio_devices.py  main.py  memory.py  memory_cache.py  memory_intelligence.py  memory_manager.py  memory_system.py  memory_tools.py  memory_viewer.py  motor_controller.py  persona.py  persona_memory.py  pyproject.toml  requirements.txt  (+15 more)
app/: config.py  gemini_client.py  logging_setup.py  main.py  memory.py  persona.py
persona_memories/: alexa_memory.json  jarvis_memory.json
